[Change] Build for Java 21 on ALL MC Versions
- This involves a major refactoring to how buildscript java_version works, removing `isLegacyASM`, and allowing JVMDowngrader to take more control.
- To avoid potential issues, modules will remain untouched, only the main API is getting upgrades as needed.